awe-tests/awe-boot/kubernetes/production/awe-boot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: awe-boot
  namespace: production
  annotations:
    app.gitlab.com/env: production
    app.gitlab.com/app: aweframework-awe
  labels:
    app: awe-boot
    env: production
spec:
  replicas: 2
  selector:
    matchLabels:
      app: awe-boot
      env: production
  template:
    metadata:
      annotations:
        app.gitlab.com/env: production
        app.gitlab.com/app: aweframework-awe
        version: 4.4.2
      labels:
        app: awe-boot
        env: production
    spec:
      containers:
        - name: awe-boot
          image: registry.gitlab.com/aweframework/awe/awe-boot:4.4.2
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /mnt/secrets
              name: secrets
              readOnly: true
          resources:
            limits:
              memory: 1Gi
            requests:
              memory: 256Mi
      volumes:
        - name: secrets
          secret:
            secretName: awe-boot
            items:
              - key: truststore.jks
                path: truststore.jks
              - key: mysql-client-keystore.p12
                path: mysql-client-keystore.p12
      imagePullSecrets:
        - name: registry.gitlab.com
