awe-tests/awe-boot/kubernetes/production/awe-boot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: awe-boot-service
  namespace: production
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: awe-boot
    env: production
