awe-tests/awe-boot/kubernetes/production/awe-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: awe-ingress
  namespace: production
  labels:
    name: awe-ingress
    env: production
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: demo-static-ip
    networking.gke.io/managed-certificates: aweframework-demo-certs
spec:
  rules:
    - host: demo.aweframework.com
      http:
        paths:
        - backend:
            serviceName: awe-boot-service
            servicePort: 80
    - host: react-demo.aweframework.com
      http:
        paths:
        - backend:
            serviceName: awe-react-service
            servicePort: 80
